src/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>ActiveModules__c</fullName>
        <label>Active Modules</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalURL__c</fullName>
        <label>External URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasDependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyDependencies__c</fullName>
        <label>Key Dependencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To target your course by segment, add the segment(s) you want to make eligible. If blank, all program members will be eligible. You can view, edit and create segments in the Programs tab.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubscriptionMode__c</fullName>
        <inlineHelpText>Choose &quot;Manual&quot; to require members to join a course before participating, or &quot;Automatic&quot; to allow members to jump right into taking modules.</inlineHelpText>
        <label>Subscription Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CourseNameNotBlank</fullName>
        <active>true</active>
        <description>Course name field needs to be complete.</description>
        <errorConditionFormula>ISBLANK( Name )|| ISNULL(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You must enter the Name of the Course</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseProgram</fullName>
        <active>true</active>
        <description>Forces the user to choose a program in the Course object.</description>
        <errorConditionFormula>ISBLANK(Program__c)||  ISNULL(Program__c)</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>You must select a Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseProgramCannotEdit</fullName>
        <active>true</active>
        <description>Cannot change the program from the course.</description>
        <errorConditionFormula>ISCHANGED( Program__c )</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>Cannot change the program from the course.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseValidateModule</fullName>
        <active>true</active>
        <description>Course need at least one Active Module if is Active.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
(
(NOT(ISPICKVAL( PRIORVALUE(Status__c) , &quot;Active&quot;)) &amp;&amp;
ISPICKVAL( Status__c , &quot;Active&quot;)) ||
(NOT(ISPICKVAL( PRIORVALUE(Status__c) , &quot;Scheduled&quot;)) &amp;&amp;
ISPICKVAL( Status__c , &quot;Scheduled&quot;)) ||
(NOT(ISPICKVAL( PRIORVALUE(Status__c) , &quot;Completed&quot;)) &amp;&amp;
ISPICKVAL( Status__c , &quot;Completed&quot;))
) &amp;&amp; ActiveModules__c &lt; 1</errorConditionFormula>
        <errorDisplayField>ActiveModules__c</errorDisplayField>
        <errorMessage>To activate a course, it must have at least one active related module.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SameProgramSegment</fullName>
        <active>true</active>
        <description>The course must have a segment within the same program.</description>
        <errorConditionFormula>Segment__r.FieloPLT__Program__c  &lt;&gt;  Program__c &amp;&amp;  NOT(ISNULL(Segment__r.FieloPLT__Program__c) ||  ISBLANK(Segment__r.FieloPLT__Program__c))</errorConditionFormula>
        <errorDisplayField>Segment__c</errorDisplayField>
        <errorMessage>Segment must be on the same program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateEndDateGreaterToday</fullName>
        <active>false</active>
        <description>Start Date and End Date should be greater than Today date</description>
        <errorConditionFormula>OR(ISNEW(), NOT(ISNEW()) &amp;&amp; (ISCHANGED(StartDate__c) || ISCHANGED(EndDate__c))) &amp;&amp; 

AND(NOT(StartDate__c &gt;=  TODAY()) || AND(NOT( EndDate__c &gt;=  TODAY())))</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date and End Date must be equal or greater than today date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateNotGreaterThanEnd</fullName>
        <active>true</active>
        <description>Start Date cannot be greater than End Date</description>
        <errorConditionFormula>OR(ISNEW(), NOT(ISNEW()) &amp;&amp; (ISCHANGED(StartDate__c) || ISCHANGED(EndDate__c))) &amp;&amp;

AND(!ISNULL( StartDate__c ), !ISNULL( EndDate__c )) &amp;&amp;  StartDate__c  &gt;  EndDate__c</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>